# multipy

./: .buildinfo  .clang-format  .coverage  .gitignore  .gitmodules  .lintrunner.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  README.md  _config.yaml  build-requirements-centos7.txt  build-requirements-centos8.txt  build-requirements-debian.txt  compat-requirements.txt  deploy.h  dev-requirements.txt  genindex.html  index.html  index.md  main  objects.inv  random_file  random_file.txt  requirements.txt  search.html  searchindex.js  setup.html  setup.py
examples/: CMakeLists.txt  hello_world_example.cpp
examples/hello_world/: hello_world_example.cpp
examples/movable_example/: movable_example.cpp
examples/path_env/: path_env.cpp
examples/quickstart/: gen_package.py  quickstart.cpp
multipy/examples/movable-example/: CMakeLists.txt  movable-example.cpp
multipy/runtime/: CMakeLists.txt  Exception.h  __init__.py  benchmark.cpp  deploy.cpp  deploy.h  elf_file.cpp  elf_file.h  embedded_file.cpp  embedded_file.h  environment.h  interactive_embedded_interpreter.cpp  loader.cpp  loader.h  mem_file.h  noop_environment.h  path_environment.cpp  path_environment.h  pybind_init.cpp  remove_dt_needed.cpp  test_compat.py  test_compat_dynamo.py  test_deploy.cpp  test_deploy_compat.cpp  test_deploy_from_python.py  test_deploy_gpu.cpp  test_deploy_imports.cpp  test_deploy_lib.cpp  test_deploy_missing_interpreter.cpp  test_deploy_python.py  test_deploy_python_ext.cpp  test_dynamo_compat.cpp  test_pybind.py  utils.cmake
multipy/runtime/example/: benchmark.cpp  examples.py  generate_examples.py  gpu_wrapper.py  tensorrt_example.py
multipy/runtime/example/fx/: examples.py  some_dependency.py
multipy/runtime/interpreter/: CMakeLists.txt  CMakePythonModules.txt  Optional.hpp  builtin_registry.cpp  builtin_registry.h  configure_cpython.sh  cpython_patch.diff  hide_symbols.script  import_find_sharedfuncptr.cpp  import_find_sharedfuncptr.h  interpreter_impl.cpp  interpreter_impl.h  move_embedded_data_sections_implicit_linker_script.txt  obj.cpp  obj.h  plugin_registry.cpp  plugin_registry.h  plugin_torch.cpp  register_frozenpython.cpp  register_numpy.cpp  register_pyyaml.cpp  test_builtin_registry.cpp
multipy/runtime/interpreter/cpython/include/python3.8/: pyconfig.h
multipy/runtime/interpreter/cpython/lib/: libcrypto.so.1.1  libssl.so.1.1
multipy/runtime/interpreter/cpython/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc  python-3.8-embed.pc  python-3.8.pc
multipy/runtime/interpreter/cpython/lib/python3.8/: _sysconfigdata__linux_x86_64-linux-gnu.py
multipy/runtime/interpreter/cpython/lib/python3.8/config-3.8-x86_64-linux-gnu/: Makefile  python-config.py
multipy/runtime/interpreter/cpython/share/doc/openssl/html/man1/: CA.pl.html  asn1parse.html  ca.html  ciphers.html  cms.html  crl.html  crl2pkcs7.html  dgst.html  dhparam.html  dsa.html  dsaparam.html  ec.html  ecparam.html  enc.html  engine.html  errstr.html  (+34 more)
multipy/runtime/interpreter/cpython/share/man/man1/: CA.pl.1  asn1parse.1  ca.1  ciphers.1  cms.1  crl.1  crl2pkcs7.1  dgst.1  dhparam.1  dsa.1  dsaparam.1  ec.1  ecparam.1  enc.1  engine.1  errstr.1  gendsa.1  genpkey.1  genrsa.1  list.1  nseq.1  ocsp.1  openssl.1  passwd.1  pkcs12.1  pkcs7.1  pkcs8.1  pkey.1  pkeyparam.1  pkeyutl.1  prime.1  rand.1  rehash.1  req.1  rsa.1  rsautl.1  s_client.1  s_server.1  s_time.1  sess_id.1  (+10 more)
multipy/runtime/interpreter/cpython/share/man/man3/: ADMISSIONS.3  ASN1_INTEGER_get_int64.3  ASN1_ITEM_lookup.3  ASN1_OBJECT_new.3  ASN1_STRING_TABLE_add.3  ASN1_STRING_length.3  ASN1_STRING_new.3  ASN1_STRING_print_ex.3  ASN1_TIME_set.3  ASN1_TYPE_get.3  ASN1_generate_nconf.3  ASYNC_WAIT_CTX_new.3  ASYNC_start_job.3  BF_encrypt.3  BIO_ADDR.3  BIO_ADDRINFO.3  BIO_connect.3  BIO_ctrl.3  BIO_f_base64.3  BIO_f_buffer.3  BIO_f_cipher.3  BIO_f_md.3  BIO_f_null.3  BIO_f_ssl.3  BIO_find_type.3  BIO_get_data.3  BIO_get_ex_new_index.3  BIO_meth_new.3  BIO_new.3  BIO_new_CMS.3  BIO_parse_hostserv.3  BIO_printf.3  BIO_push.3  BIO_read.3  BIO_s_accept.3  BIO_s_bio.3  BIO_s_connect.3  BIO_s_fd.3  BIO_s_file.3  BIO_s_mem.3  (+427 more)
multipy/runtime/interpreter/cpython/share/man/man5/: config.5  x509v3_config.5
multipy/runtime/interpreter/cpython/share/man/man7/: Ed25519.7  RAND.7  RAND_DRBG.7  RSA-PSS.7  SM2.7  X25519.7  bio.7  crypto.7  ct.7  des_modes.7  evp.7  ossl_store-file.7  ossl_store.7  passphrase-encoding.7  proxy-certificates.7  scrypt.7  ssl.7  x509.7
multipy/runtime/interpreter/frozen/: main.c
multipy/runtime/testdev/: test_deploy_from_python.py
multipy/runtime/unity/: example.py  main.cpp  xar_environment.cpp  xar_environment.h
multipy/runtime/unity/tests/: simple_model.py  sum.py  test_unity.h  test_unity_simple_model.cpp  test_unity_sum.cpp
runtime/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TARGETS  cmake_install.cmake  deploy.cpp  deploy.h  elf_file.cpp  elf_file.h  environment.h  interactive_embedded_interpreter.cpp  loader.cpp  loader.h  mem_file.h  noop_environment.h  path_environment.cpp  path_environment.h  remove_dt_needed.cpp  test_deploy.cpp  test_deploy_from_python.py  test_deploy_gpu.cpp  test_deploy_missing_interpreter.cpp
runtime/example/: TARGETS  Untitled-1  benchmark.cpp  examples.py  generate_examples.py  gpu_wrapper.py  tensorrt_example.py
runtime/example/fx/: examples.py  some_dependency.py
runtime/interpreter/: CMakeLists.txt  Makefile  TARGETS  builtin_registry.cpp  cmake_install.cmake  import_find_sharedfuncptr.cpp  interpreter_impl.cpp  interpreter_impl.h  register_frozenpython.cpp  register_pyyaml.cpp
runtime/interpreter/cpython/src/cpython-stamp/: cpython-gitinfo.txt
runtime/interpreter/cpython/tmp/: cpython-cfgcmd.txt  cpython-gitclone.cmake
runtime/interpreter/typing/src/typing-stamp/: typing-gitinfo.txt
runtime/interpreter/typing/tmp/: typing-gitclone.cmake
runtime/unity/: TARGETS  main.cpp  xar_environment.cpp  xar_environment.h
runtime/unity/fb/: textray.py
runtime/unity/tests/: TARGETS  simple_model.py  sum.py  test_unity_simple_model.cpp  test_unity_sum.cpp
(+911 files in other folders)
